--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
       <p class="lead">¿Estas interesado en saber las ultimas novedades en tema de comics? Registrate en nuestra pagina para obtener noticias.</p>
       <hr class="my-4">
       <div style="text-align: center;">
-        <img src="/assets/img/Logobatman.jpg" alt="" style="width: 30%; height: 20%;">
+        <img src="/src/assets/img/Logobatman.jpg" alt="" style="width: 30%; height: 20%;">
         <p style="text-align: center;">¡Unete a la comunidad!.</p>
         <a class="btn btn-dark btn-lg"  data-toggle="modal" data-target="#modal_registro" href="#" role="button">Registrate aqui!</a>
   
